--- a/Drones/Views/ParkingLot/ParkingLotListView.cshtml
+++ b/Drones/Views/ParkingLot/ParkingLotListView.cshtml
@@ -4,15 +4,15 @@
     ViewData["Title"] = "ParkingLotListView";
 }
 
-<h2>ParkingLotListView</h2>
+<h2>Aišktelių sąrašas</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="createLot">Kurti naują</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>Parking lot list view</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
