--- a/Drones/Views/ParkingLot/ParkingLotFormView.cshtml
+++ b/Drones/Views/ParkingLot/ParkingLotFormView.cshtml
@@ -10,17 +10,16 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="createLot">
+        <form asp-action="confirmInformation">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Saugoti ir kurti maršrutą" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 <br>
 <p>
-    <a asp-controller="DroneSubsystem"  asp-action="createDroneRoute">Kurti naują maršrutą</a>
 </p>
 
 <div>
