--- a/Drones/Views/ParkingLot/ParkingLotListView.cshtml
+++ b/Drones/Views/ParkingLot/ParkingLotListView.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "ParkingLotListView";
 }
 
-<h2>Aišktelių sąrašas</h2>
+<h2>Aikštelių sąrašas</h2>
 
 <p>
-    <a asp-action="createLot">Kurti naują</a>
+    <a asp-controller="ParkingLot" asp-action="createLot">Kurti naują</a>
 </p>
 <table class="table">
     <thead>
