--- a/Drones/Views/DroneSubsystem/DroneRouteFormView.cshtml
+++ b/Drones/Views/DroneSubsystem/DroneRouteFormView.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="createDroneRoute">
+        <form asp-controller="DroneSubsystem" asp-action="checkInput">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <p>
@@ -22,13 +22,13 @@
                     Koordinatės:
                     <br>
                 <p class="coord">
-                    <input type="number" name="lat" step=".01" required />
-                    <input type="number" name="lon" step=".01" required />
-                    <span class="remove" runat="server">trinti</span>
+                    <input type="number" class="lat" name="lat_0" step=".01" required/>
+                    <input type="number" class="lon" name="lon_0" step=".01" required />
+                    <button type="button" class="remove_0" onclick="removeOnClick(0)" runat="server">trinti</button>
                 </p>
-                <span class="add" runat="server">pridėti</span>
+                <button type="button" class="add" runat="server">pridėti</button>
                 <br><br>
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Saugoti" class="btn btn-default" />
             </div>
         </form>
     </div>
@@ -42,17 +42,20 @@
     <script language="javascript" type="text/javascript">
         var index = 0;
         $(".add").click(function () {
-            var dupelicate = $(".coord").clone(true);
-            dupelicate.removeClass("coord");
-            dupelicate.removeClass("coord_".concat(index));
-            dupelicate.children[0].val = "";
-            dupelicate.children[1].val = "";
-            dupelicate.insertBefore(this);
+            index = index + 1;
+            var newElem =
+                "<p>\n" +
+                    "<input type=\"number\" class=\"lat_" + index +"\" name=\"lat_" + index + "\" step=\".01\" required />\n" +
+                    "<input type=\"number\" class=\"lon_" + index + "\" name=\"lon_" + index +"\" step=\".01\" required />\n" +
+                    "<button type=\"button\" class=\"remove_" + index + "\" onclick=\"removeOnClick(" + index +")\" runat=\"server\">trinti</button>\n" +
+                "</p>";
+            $(newElem).insertBefore(this);
             return false;
         });
-        $(".remove").click(function () {
-            $(this).parent().remove();
-        });
+
+        function removeOnClick(index) {
+            $(".remove_" + index).parent().remove();
+        }
     </script>
 
 
