Drone number recognition

--- a/Drones/Views/Shared/_Layout.cshtml
+++ b/Drones/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="ParkingLot" asp-action="showLots">Aikštelių sąrašas</a></li>
                     <li><a asp-area="" asp-controller="DroneSubsystem" asp-action="openDroneListView">Dronų sąrašas</a></li>
+                    <li><a asp-area="" asp-controller="DroneSubsystem" asp-action="tempDroneForm">dronų žinučių testavimas</a></li>
                 </ul>
             </div>
         </div>
