Reservation now works

--- a/UserSystem/ParkingApplication/app/src/main/res/layout/activity_new_reservation.xml
+++ b/UserSystem/ParkingApplication/app/src/main/res/layout/activity_new_reservation.xml
@@ -23,57 +23,6 @@
         android:layout_below="@+id/label2"
         android:layout_centerHorizontal="true"/>
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/label2"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:gravity="center">-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            android:gravity="center">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Valandos"/>-->
-
-<!--            <EditText-->
-<!--                android:id="@+id/durationPicker_h"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:timePickerMode="spinner"-->
-<!--                android:hint="h"-->
-<!--                android:textAlignment="center"/>-->
-
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical"-->
-<!--            android:gravity="center">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Minutės"/>-->
-
-<!--            <EditText-->
-<!--                android:id="@+id/durationPicker_m"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:timePickerMode="spinner"-->
-<!--                android:hint="m"-->
-<!--                android:textAlignment="center"/>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/label1"
@@ -92,5 +41,15 @@
         android:timePickerMode="spinner"
         android:layout_below="@+id/label1"
         android:layout_centerHorizontal="true"/>
+
+
+
+    <Button
+        android:id="@+id/register_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registruoti"
+        android:layout_below="@+id/parkingLotSpinner"
+        android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
