Added parking lot creation, updated gitIgnore

--- a/MainSystem/Drones/Views/DroneSubsystem/DroneRouteFormFromView.cshtml
+++ b/MainSystem/Drones/Views/DroneSubsystem/DroneRouteFormFromView.cshtml
@@ -1,16 +1,16 @@
 ﻿@model Drones.Models.Route
 
 @{
-    ViewData["Title"] = "DroneRouteFormView";
+    ViewData["Title"] = "DroneRouteFormFromView";
 }
 
-<h2>Naujo maršruto forma</h2>
+<h2>Naujo maršruto iš forma</h2>
 
 <h4>Maršrutas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="DroneSubsystem" asp-action="checkInput">
+        <form asp-controller="DroneSubsystem" asp-action="checkInputFrom">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <p>
